added comments to all files

--- a/Main/index.html
+++ b/Main/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <header>
+        <!--added links from the header to links below-->
         <h1 id="home"><strong>Remington's Portfolio</strong></h1>
         <nav>
             <ul class="navbar">
@@ -22,6 +23,7 @@
 
     <main>
         <section>
+            <!--added images and classes for about me-->
             <article class="aboutMe">
                 <h2 id="about-me">About Me</h2>
                 <div>
@@ -38,6 +40,7 @@
                 </div>
             </article>
             <article>
+                <!--need to add image links and classes-->
                 <h2 id="work"><strong>Work</strong></h2>
                 <div class="container">
                     <div class="flex-box">
